--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - run: sudo rm -rf /etc/ros/rosdep/
       # avert `sudo: setrlimit(RLIMIT_CORE): Operation not permitted`
       # which was fixed in sudo 1.8.31p1
-      - run: sudo apt update && sudo apt upgrade sudo
+      - run: sudo apt update && sudo apt upgrade sudo -y
       - uses: ros-tooling/setup-ros@0.0.25
         with:
           required-ros-distributions: ${{matrix.ros-distro}}
